# FabricsMapping

./: CMakeLists.txt  README.md
include/: choixmotifdialog.hpp  edge.hpp  grid.hpp  mappingdialog.hpp  mappingmath.hpp  node.hpp  pixmap.hpp  radiobuttonmotif.hpp  savetemplatedialog.hpp  surfacebezier.hpp  window.hpp
src/: choixmotifdialog.cpp  edge.cpp  grid.cpp  main.cpp  mappingdialog.cpp  mappingmath.cpp  node.cpp  pixmap.cpp  radiobuttonmotif.cpp  savetemplatedialog.cpp  surfacebezier.cpp  window.cpp
